resources/style.css
/* ... */
.container {
  padding: 5rem;
}

.fast-changes {
  padding-top: 2rem;
  padding-bottom: 6rem;
}

section {
  width: 100%;
  height: auto;
  color: var(--clr-primary-400);
}

.fw-bold {
  font-weight: var(--fw-bold);
  text-align: center;
}
.fw-semi-bold {
  font-weight: var(--fw-semi-bold);
}

.fw-regular {
  font-weight: var(--fw-regular);
}

.fs-primary-heading {
  font-size: var(--fs-primary-heading);
  line-height: 1.1;
}

.fs-body {
  font-size: var(--fs-body);
}

.fs-secondary-heading {
  font-size: var(--fs-secondary-heading);
  line-height: 1.1;
}

.fs-main-text {
  font-size: var(--fs-main-text);
}

.fs-300 { font-size:var(--fs-300);}
.fs-400 { font-size: var(--fs-400);}
.fs-500 { font-size: var(--fs-500);}
.fs-600 { font-size: var(--fs-600);}

/*Spacing and stuff for entire site*/
  
/*Section one spacing*/
  header a {
    text-decoration: none;
  }

  .welcome h1 {
    padding-bottom: 3.4rem;
  }

/*End of section 1 spacing*/

/*Section two spacing*/
  .section-2 p {
    padding-bottom: 3.4rem;
  }
/*End of section two spacing*/

/*Section 3 spacing*/
  .section-3 p {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
/*End of section 3 spacing*/

/*Section 4 borders for projects*/
  .section-4 img {
    border: .5rem solid var(--clr-accent-400);
  }
/*End of section 4 spacing*/

/*Start of section 5 spacing*/
  .section-5 h2 {
    padding-bottom: 2rem;
  }
  .section-5 p {
    padding-bottom: 1.5rem;
  }
/*End of section 5 spacing*/

/*Start of section 6 spacing*/
.section-6 h2 {
  padding-bottom: 2rem;
}
.section-6 p {
  padding-bottom: 1.5rem;
}
/*End of section 6 spacing*/

/*Section 7 spacing*/

.section-7 h2 {
  padding-bottom: 2rem;
}
.section-7 p {
  padding-bottom: 1.5rem;
}
/*End of section 7 spacing */

/*Start of footer spacing*/
.footercolumn li {
  padding-top: .3rem;
  padding-bottom: 1rem;
}

.inputemail {
  padding-top: .4rem;
}
/*End of footer spacing*/
/*End of spacing and stuff*/

/*Button styling for CTA*/
.pushable {
  background: hsl(0, 0%, 87%);
  border-radius: 12px;
  border: none;
  padding: 0;
  cursor: pointer;
  outline-offset: 4px;
}

.front {
  display: block;
  padding: .3rem 1rem;
  border-radius: 12px;
  font-size: 1.25rem;
  background: var(--clr-accent-100);
  color: white;
  transform: translateY(-6px);
}

.pushable:active .front {
  transform: translateY(-2px);
}



/*End of button styling for CTA*/

/*Everything centered according to Figma*/
section {
  text-align: center;
}

.section-4 a {
  text-decoration: underline;
  color: var(--clr-accent-400);
}
/*Stupid link in #adhoc wont work like the other with the styling above, so I used a Id selector*/
#adhoc {
  text-decoration: underline;
  color: var(--clr-accent-400);
}

/*Image styling*/
.computer-screen {
  display: flex;
  justify-content: center;
}

.arrow {
  padding-top: -3rem;
  margin-top: -3rem;
  padding-bottom: -6rem;
  margin-bottom: -6rem;
  display: flex;
  justify-content: center;
}

.project-ss {
  display: flex;
  justify-content: center;
  padding-top: 4rem;
}

.desktop-dev {
  display: flex;
  justify-content: center;
}

.mobile-dev {
  display: flex;
  justify-content: center;
}

@media (max-width: 34.5625em) {
  .welcome h1 {
    text-align: left;
  }
  .welcome p {
    text-align: left;
  }
}
/*Navigation Styles*/

/*WDS Tab header*/
.tab-heading {
  text-align: center;
  overflow: hidden;
  /*border: 1px solid #ccc;
  background-color: #f1f1f1;*/
}

.tab-heading p {
  font-size: var(--fs-700);
}

.tab-heading button {
  background-color: inherit;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 0px 0px;
  transition: 0.3s;
  font-size: 17px;
}

.tab-heading button:hover {
  background-color: #ddd;
}
/*End of tab-header*/
/* Style the tab */
.nav-container {
  overflow: hidden;
  border: 1px solid #ccc;
  background-color: #f1f1f1;
}

.tab {
  overflow: hidden;
  background-color: #f1f1f1;
}

.tab a {
  text-decoration: none;
  color: var(--clr-accent-300);
}

/* Style the buttons inside the tab */
.tab button {
  background-color: inherit;
  text-align: center;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.3s;
  font-size: 17px;
}

/* Change background color of buttons on hover */
.tab button:hover {
  background-color: hsl(0, 0%, 87%);
}

/* Create an active/current tablink class */
.tab button.active {
  background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
  display: none;
  padding: 6px 12px;
  border: 1px solid #ccc;
  border-top: none;
}

/*Navigation on desktop*/
@media (min-width: 48em) {
  .tab-heading {
    display: flex;
    justify-content: space-between;
    overflow: hidden;
    /*border: 1px solid #ccc;
    background-color: #f1f1f1;*/
    padding-left: 6rem;
  }
  
  .tab-heading p {
    font-size: var(--fs-700);
  }
  
  .tab-heading button {
    background-color: inherit;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 0px 0px;
    transition: 0.3s;
    font-size: 17px;
  }
  
  .tab-heading button:hover {
    background-color: #ddd;
  }

  .nav-container {
    overflow: hidden;
    border: 1px solid #ccc;
    background-color: #f1f1f1;
  }
  
  .tab {
    overflow: hidden;
    background-color: #f1f1f1;
  }
  
  .tab a {
    padding: 2rem;
    text-decoration: none;
    color: var(--clr-accent-300);
  }

  .tab button {
    background-color: inherit;
    text-align: center;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    font-size: 17px;
  }

  .tab button:hover {
    background-color: hsl(0, 0%, 87%);
  }

  .tab button.active {
    background-color: #ccc;
  }

  .tab button.active {
    background-color: #ccc;
  }

  .tabcontent {
    display: none;
    padding: 6px 12px;
    border: 1px solid #ccc;
    border-top: none;
  }

}

/*Img for all containers*/

.computer-screen img {
  width: 23rem;
  height: auto;
  text-align: center;
  margin: auto;
  display: block;
}
/* ... */

